--- a/cmd/android/magopie/app/src/main/res/values/strings.xml
+++ b/cmd/android/magopie/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-  <string name="app_name">magopie</string>
+  <string name="app_name">Magopie</string>
   <string name="action_settings">Settings</string>
 </resources>
